# ml-summerschool-2025

./: 20250824_welcome@HPC.pptx  Interpretation_of_GNN_input_via_LLMs_round1.py  README.md
slurm/: apptainer.sh  conda-python.sh  debug-apptainer-build.sh
topic-1_data-integration-and-llms/: README.md  plan.md
topic-1_data-integration-and-llms/lecture_1/: README.md
topic-1_data-integration-and-llms/lecture_2/: 0_setting_up_uv.md  1_getting_gemini_API_key.md  2_inference_with_langchain.md  3_extension_to_openrouter.md  4_ollama.md  5_anatomy_system_prompt.md  README.md
topic-1_data-integration-and-llms/lecture_2/uv_env/: pyproject.toml
topic-1_data-integration-and-llms/lecture_3/: 0_classical_vs_llm_structure.md  1_manual_prompting.md  2_pydantic_fundamentals.md  3_langchain_structured_outputs_pharmacology.md  README.md
topic-1_data-integration-and-llms/lecture_4/: 0_introduction_to_tools.md  1_langchain_tools.md  2_intro_to_mcp.md  README.md
topic-1_data-integration-and-llms/lecture_5/: 0_agents_and_react.md  1_langgraph_basics.md  2_react_in_langgraph.md
topic-2_protein-language-models/notebooks/: 03_VisualisingEmbeddings.ipynb  0_Getting_Started_PyTorch.ipynb  1_pLMs_Part1.ipynb  2_pLMs_Part2.ipynb  4_PLMs_finetune_esm2.ipynb  5_PLMs_TextGenerationExploration.ipynb
topic-3_SpatialOmics/: README.md
topic-3_SpatialOmics/Notebooks/: Spatial_transcriptomics_small_intestine.ipynb
topic-4_deep-learning-protein-structures/: README.md
topic-4_deep-learning-protein-structures/day_1/: dimers_classification.ipynb  pytorch_intro.ipynb
(+10 files in other folders)
